# ufasta

./: .gitignore  Makefile.am  README.md  Tupfile  common.cc  common.hpp  configure.ac  dgrep.cc  dgrep_cmdline.yaggo  extract.cc  extract_cmdline.yaggo  format.cc  format_cmdline.yaggo  head.cc  head_cmdline.yaggo  hgrep.cc  hgrep_cmdline.yaggo  n50.cc  n50_cmdline.yaggo  one.cc  one_cmdline.yaggo  rc.cc  rc_cmdline.yaggo  sizes.cc  sizes_cmdline.yaggo  sort.cc  sort_cmdline.yaggo  split.cc  split_cmdline.yaggo  tail.cc  tail_cmdline.yaggo  ufasta.cc
tests/: Tupfile  common.sh  test_dgrep.sh  test_dsort.sh  test_extract.sh  test_format.sh  test_head.sh  test_hgrep.sh  test_n50.sh  test_one.sh  test_rc.sh  test_rsort.sh  test_sizes.sh  test_sort.sh  test_split.sh  test_tail.sh  testsh.in
